# tree-sitter-pyttern

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test_all_pyt.sh  tree-sitter.json
.github/workflows/: test-grammar.yml
bindings/c/: tree-sitter-pyttern.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_pyttern/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPyttern/: pyttern.h
bindings/swift/TreeSitterPytternTests/: TreeSitterPytternTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/pyttern/: call_wildcard.txt  compound_wildcard.txt  contains_wildcard.txt  contains_wildcard_integration.txt  errors.txt  integration.txt  multiple_compound_wildcard.txt  multiple_wildcard.txt  number_wildcard.txt  simple_wildcard.txt  stmt_wildcards.txt  subpatterns.txt  var_wildcard.txt  wildcards.txt
