[package]
name = "tree-sitter-pyttern"
description = "Grammar for the Pyttern Query Language"
version = "0.1.1"
authors = ["Julien Liénard <julien.lienard@uclouvain.be>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "pyttern"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/julienlie/tree-sitter-pyttern"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
